:white_check_mark: Fix buttons alignment as template

--- a/src/style.css
+++ b/src/style.css
@@ -27,6 +27,10 @@ header {
   margin: auto;
 }
 
+.scores {
+  justify-content: space-between;
+}
+
 .column-title {
   color: white;
   font-size: 24px;
@@ -59,6 +63,7 @@ p {
 
 .refresh-btn {
   margin-left: 20px;
+  width: 25%;
 }
 
 .btn {
@@ -68,6 +73,7 @@ p {
   background-color: transparent;
   color: white;
   cursor: pointer;
+  justify-self: right;
 }
 
 .btn:hover {
@@ -101,4 +107,5 @@ p {
   width: 25%;
   margin-top: 10px;
   justify-self: right;
+  margin-left: 37%;
 }
